[package]
name = "tokio-vsock"
version = "0.3.2"
authors = ["fsyncd", "rust-vsock"]
description = "Asynchronous Virtio socket support for Rust"
repository = "https://github.com/rust-vsock/tokio-vsock"
homepage = "https://github.com/rust-vsock/tokio-vsock"
readme = "README.md"
license = "Apache-2.0"
edition = "2018"
exclude = ["test_fixture"]

[features]
tonic-conn = ["tonic"]

[dependencies]
bytes = "0.4.12"
futures = "0.3"
libc = "0.2.79"
vsock = "0.2.4"
tokio = { version = "1", features = ["net"] }
tonic = { version = "0.6.2", optional = true }

[dev-dependencies]
sha2 = "0.9.0"
rand = "0.8.3"
tokio = { version = "1", features = ["macros", "rt", "io-util"] }
