[package]
name = "tokio-vsock"
version = "0.6.0"
authors = ["fsyncd", "rust-vsock"]
description = "Asynchronous Virtio socket support for Rust"
repository = "https://github.com/rust-vsock/tokio-vsock"
homepage = "https://github.com/rust-vsock/tokio-vsock"
readme = "README.md"
license = "Apache-2.0"
edition = "2018"
exclude = ["test_fixture"]

[dependencies]
bytes = "1.3.0"
futures = "0.3"
libc = "0.2.158"
vsock = "0.5.1"
# Keep version in sync with [dev-dependencies]
tokio = { version = "1.34", features = ["net", "sync"] }
tonic05 = { package = "tonic", version = "0.5", optional = true }
tonic06 = { package = "tonic", version = "0.6", optional = true }
tonic07 = { package = "tonic", version = "0.7", optional = true }
tonic08 = { package = "tonic", version = "0.8", optional = true }
tonic09 = { package = "tonic", version = "0.9", optional = true }
tonic010 = { package = "tonic", version = "0.10", optional = true }
tonic011 = { package = "tonic", version = "0.11", optional = true }
tonic012 = { package = "tonic", version = "0.12", optional = true }

[dev-dependencies]
sha2 = "0.10.6"
rand = "0.8.5"
tokio = { version = "1.34", features = ["macros", "rt", "io-util"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
