[package]
name = "hyper-vsock"
version = "0.1.0"
authors = ["fsyncd"]
description = "Hyper Connector for Virtio sockets"
license = "Apache-2.0"
edition = "2018"

[dependencies]
bytes = "0.4"
futures = "0.1.29"
hyper = "0.12.35"
libc = "0.2.65"
nix = "0.15.0"
tokio-vsock = { path = "../" }
tokio = "0.1.22"


