[package]
name = "test_server"
version = "0.1.1"
authors = ["fsyncd"]
description = "Tokio Virtio socket test server"
license = "Apache-2.0"
edition = "2018"

[dependencies]
clap = "2.33.0"
futures = "0.3.5"
libc = "0.2.65"
nix = "0.17.0"
tokio = { version = "1.0.1", features = ["macros", "rt-multi-thread", "io-util",] }
tokio-vsock = { path = "../" }
